More defensive handling in the test that will currently fail on the Temurin JDK25 on the github CI